k8s/backtest-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backtest-service
  labels:
    app: backtest-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backtest-service
  template:
    metadata:
      labels:
        app: backtest-service
    spec:
      containers:
      - name: backtest-service
        image: muscathan/backtest-service:1.3.20
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8082
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8082
          initialDelaySeconds: 120
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backtest-service
  labels:
    app: backtest-service
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: backtest-service
