k8s/gateway-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
  labels:
    app: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      serviceAccountName: gateway-server
      containers:
      - name: gateway-server
        image: muscathan/gateway-server:1.2.7
        imagePullPolicy: Always
        ports:
        - containerPort: 8070
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8070
          initialDelaySeconds: 60
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8070
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  labels:
    app: gateway-server
spec:
  type: LoadBalancer
  ports:
  - port: 8070
    targetPort: 8070
    protocol: TCP
  selector:
    app: gateway-server
