k8s/trade-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trade-service
  labels:
    app: trade-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trade-service
  template:
    metadata:
      labels:
        app: trade-service
        tier: business-service
    spec:
      containers:
      - name: trade-service
        image: muscathan/trade-service:1.2.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 120
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: trade-service
  labels:
    app: trade-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: trade-service
